--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "apollo-server-express": "^2.19.0",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.12.2",
+    "connect-redis": "^5.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "graphql": "^15.4.0",
+    "ioredis": "^4.19.2",
     "pg": "^8.4.2",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
@@ -16,10 +20,20 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/connect-redis": "^0.0.15",
+    "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
+    "@types/express-session": "^1.17.1",
     "@types/graphql": "^14.5.0",
+    "@types/ioredis": "^4.17.7",
     "@types/node": "^14.14.6",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
+    "eslint": "^7.13.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "nodemon": "^2.0.6",
+    "prettier": "^2.1.2",
     "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.5"
