--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "express-session": "^1.17.1",
     "graphql": "^15.4.0",
     "ioredis": "^4.19.2",
+    "nodemailer": "^6.4.15",
     "pg": "^8.4.2",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
-    "typeorm": "^0.2.29"
+    "typeorm": "^0.2.29",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -27,6 +29,8 @@
     "@types/graphql": "^14.5.0",
     "@types/ioredis": "^4.17.7",
     "@types/node": "^14.14.6",
+    "@types/nodemailer": "^6.4.0",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
     "eslint": "^7.13.0",
